# oc-jax

./: .gitignore  LICENSE  README.md  setup.cfg
apop/: __init__.py  controller.py  cost_function.py  distribution.py  filter.py  observation_model.py  random.py  transition_model.py
apop/controllers/: cem.py  lgr.py  lqr.py  mppi.py  random_shooting.py
apop/cost_functions/basic/: quadratic.py
apop/cost_functions/classic_control/: acrobot.py  cartpole.py  pendulum.py
apop/distributions/: gaussian.py
apop/envs/: arm2d_reaching.py  environment_utils.py
apop/envs/assets/: arm2d_reaching.xml
apop/envs/classic_control/: acrobot.py  cartpole.py  pendulum.py
apop/envs/gymnasium/: cartpole.py
apop/envs/mujoco/: arm2d_reaching.py  ball2d_moving.py  (+2 more)
apop/filters/: __init__.py  particle_filter.py
apop/utils/: jax_functions.py  maths.py  randoms.py  solids.py  transformations.py
dockerfiles/: Dockerfile  build.sh  launch.sh  requirements.txt
examples/cem/: acrobot.py  cartpole.py  inverted_cartpole.py  pendulum.py  swingup_cartpole.py
examples/lqr/: cartpole.py  inverted_cartpole.py
examples/mppi/: acrobot.py  inverted_cartpole.py  mountain_car.py  pendulum.py  swingup_cartpole.py
examples/pf/: ball2d_tracking.py
examples/random_shooting/: inverted_cartpole.py
scripts/: run_environment.py
tests/: test_cost_function.py  test_transition_model.py
tests/cost_functions/: test_quadratic.py
tests/distributions/: test_gaussian.py
tests/filters/: test_particle_filter.py
tests/transition_models/: test_linear.py
tests/utils/: test_jax_functions.py
(+14 files in other folders)
