[metadata]
name = apop
version = attr: apop.__version__
author = Shunichi Sekiguchi
author_email = quick1st97of@gmail.com
description =  Active Perception Optimal Control Approach
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
keywords = aibo, robot, mujoco
python_requires = >=3.8

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    numpy
    scipy
    matplotlib
    types-dataclasses
    opencv-python
    opencv-contrib-python
    PyOpenGL-accelerate
    flake8
    pylint
    pytest
    pytest-cov
    mypy
    isort
    natsort
    black
    gymnasium
    imageio
    moviepy
    mujoco
test_suite = tests
tests_require = pytest; pytest-cov; mock

[options.packages.find]
exclude = 
    tests

[aliases]
test=pytest

[tool:pytest]
addopts=-s

[isort]
honor_noqa=True
known_first_party=apop
profile=black

[mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html for detail description of each configuration
python_version=3.8
ignore_missing_imports=True
no_implicit_optional=True
warn_unused_configs=True
warn_redundant_casts=True
warn_unused_ignores=True
warn_return_any=True
warn_unreachable=True
files=aibo_gym

[flake8]
filename=*.py
